fix overflow

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -151,12 +151,12 @@ h1 {
 		}
 }
 
-figure#slidena{
+#slidena{
 	margin:0;
 	overflow:hidden;
 }
 
-figure#slidena div{
+#slidena figure div{
 	width:20%;
 	min-height:500px;
 	float:left;
@@ -165,7 +165,7 @@ figure#slidena div{
 	text-shadow: 2px 2px rgba(64,64,64,0.5);
 }
 
-figure#slidena{
+#slidena figure{
 	position:relative;
 	width:500%;
 	height:auto;
@@ -235,8 +235,7 @@ figure#slidena{
 	/*position: relative;*/
 	width: 80px;
 	height: 80px;
-	margin-right: 30px;
-	margin-left: 10px;
+	margin-right: 20px;
 }
 
 #about_header {
